load-balancer/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: load-balancer
  name: load-balancer
spec:
  selector:
    matchLabels:
      app: load-balancer
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: load-balancer
    spec:
      containers:
      - image: registry.redhat.io/rhel8/httpd-24:latest
        imagePullPolicy: IfNotPresent
        name: httpd
        ports:
        - containerPort: 8080
          protocol: TCP
        resources: {}
        volumeMounts:
        - name: load-balancer-config
          mountPath: /etc/httpd/conf.d/load-balancer.conf
          subPath: load-balancer.conf
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      volumes:
      - name: load-balancer-config
        configMap:
          name: load-balancer-config
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
