load-balancer/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: httpd
  name: httpd
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: httpd
  sessionAffinity: None
  type: ClusterIP
